add a Dialog fragment. Stille need to change the deign when it needs to be called

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Maps Activity</string>
     <string name="title_activity_maps">Maps Activity</string>
     <string name="google_maps_api_key">AIzaSyDWktkPLNwP-r2OMcnjMBCo67xcKr5POG4</string>
+
+    <string name="add_location">Adding marker at this Location</string>
+    <string name="save_location">Save Memory</string>
 </resources>
